# azcli

./: BASTION-SUPPORT-REPORT.md  Cargo.toml  HANDOFF.md  README.md
.sisyphus/state/: session-2026-04-20.md
docs/: account.md  authentication.md  bastion.md  deployments.md  image.md  managed-disks.md  network.md  pim.md  resource-groups.md  rest.md  role.md  sig.md  virtual-machine-scale-sets.md  virtual-machines.md
src/: api_client.rs  arm_client.rs  auth.rs  main.rs  models.rs  output.rs  tunnel.rs
src/auth/: cache.rs  device_code.rs  interactive.rs  managed_identity.rs  mod.rs  service_principal.rs  token_provider.rs
src/commands/: create.rs  delete.rs  list.rs  mod.rs  rdp.rs  rest.rs  show.rs  ssh.rs  tunnel.rs  update.rs  wait.rs
src/commands/account/: clear.rs  get_access_token.rs  list.rs  list_locations.rs  list_profiles.rs  mod.rs  set.rs  show.rs
src/commands/deployment/: mod.rs
src/commands/disk/: create.rs  delete.rs  grant_access.rs  list.rs  list_skus.rs  mod.rs  revoke_access.rs  show.rs  update.rs
src/commands/group/: list.rs  show.rs
src/commands/image/: list.rs  mod.rs  show.rs
src/commands/network/: mod.rs
src/commands/role/: mod.rs
src/commands/sig/: list.rs  list_community.rs  list_shared.rs  mod.rs  show.rs  show_community.rs  show_shared.rs
src/commands/vm/: assess_patches.rs  auto_shutdown.rs  capture.rs  convert.rs  create.rs  deallocate.rs  delete_vm.rs  generalize.rs  get_instance_view.rs  install_patches.rs  list.rs  list_ip_addresses.rs  (+18 more)
src/tui/: app.rs  data.rs  event.rs  keys.rs  mod.rs  stderr_capture.rs  ui.rs
(+194 files in other folders)
