[package]
name = "azcli"
version = "0.1.0"
edition = "2024"
description = "Azure CLI equivalent with Bastion plugin, written in Rust"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# URL handling
url = "2"

# Base64 encoding
base64 = "0.22"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
webpki-roots = "1"

# Process management
which = "7"

# YAML serialization (for -o yaml/yamlc output)
serde_yaml = "0.9"
